# MiniCad

miniCad/: .gitignore  AppContext.cpp  AppContext.h  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
miniCad/Controller/: CadController.cpp  CadController.h  Command.h  CommandManager.cpp  CreateBoxCommand.cpp  CreateBoxCommand.h  CreateElementCommand.cpp  CreateElementCommand.h  ElementCreateParams.h
miniCad/Controller/Command/: ChangePropertyCommand.cpp  ChangePropertyCommand.h  Command.cpp  CommandManager.h  CreateElementCommand.cpp  CreateElementCommand.h  TransformElementsCommand.cpp  TransformElementsCommand.h
miniCad/Controller/Interaction/: CoordinateResolver.cpp  CoordinateResolver.h  InteractionHandler.cpp  InteractionHandler.h  InteractionManager.cpp  InteractionManager.h  NavigationHandler.cpp  NavigationHandler.h  SelectionHandler.cpp  SelectionHandler.h  TransformTypes.h  ViewController.cpp  ViewController.h
miniCad/Controller/Preview/: PreviewManager.cpp  PreviewManager.h
miniCad/Controller/Tools/: CreateElementTool.cpp  CreateElementTool.h
miniCad/Data/: BoxElement.cpp  BoxElement.h  CylinderElement.cpp  CylinderElement.h  Document.cpp  Document.h  Element.cpp  Element.h  ElementFactory.cpp  ElementFactory.h  ElementId.cpp  ElementId.h  ElementType.h  GeometryTypes.h
miniCad/Presentation/: DocumentObserver.cpp  DocumentObserver.h  PreviewAdaptor.cpp  PreviewAdaptor.h  ReferenceOverlay.cpp  ReferenceOverlay.h  SelectionManager.cpp  SelectionManager.h  TransformPreviewAdaptor.cpp  TransformPreviewAdaptor.h  ViewAdaptor.cpp  ViewAdaptor.h  ViewObjectRegistry.cpp  ViewObjectRegistry.h  ViewStateAdaptor.cpp  ViewStateAdaptor.h
miniCad/Rendering/: CadView.cpp  CadView.h
miniCad/Scene/: Scene.cpp  Scene.h  SceneElement.h  SceneObject.h
miniCad/UI/: MainWindow.cpp  MainWindow.h
miniCad/Utils/: GeomCalculator.cpp  GeomCalculator.h  GlobalUniqueId.cpp  GlobalUniqueId.h  MacroSet.h  MessageInfo.h  Timer.h  Types.h
miniCad/View/: CadView.cpp  CadView.h
miniCad/docs/: 2026-06-28-gizmo-interaction.zh.md  2026-06-29-learning-roadmap.zh.md  architecture-summary.md  architecture-summary.zh.md
miniCad/include/: canvas.h  shapes.h  utils.h
miniCad/src/: canvas.cpp  main.cpp  shapes.cpp  utils.cpp
miniCad/tests/: test_canvas.cpp  test_shapes.cpp
(+41 files in other folders)
